tests/golden/type_errors/function_assignment_arity_mismatch.cd
let f = fun (x) {
  return x;
};
f = fun (x, y) {
  return x + y;
};
