tests/golden/type_errors/function_assignment_arity_mismatch.err
Type error at 4:5: expected 1 parameters but got 2
  f = fun (x, y) {
      ^
